--- a/index.html
+++ b/index.html
@@ -8,64 +8,58 @@
 	<link rel="stylesheet" type="text/css" href="styles/style.css" />
 	<link rel="stylesheet" type="text/css" href="styles/sequencejs-theme.sliding-horizontal-parallax.css" />
 	<script src="scripts/html5shiv.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script>
-		 if (typeof jQuery == 'undefined'){
-		    document.write(unescape('%3Cscript src="scripts/jquery-min.js" %3E%3C/script%3E'));
-		 }
-		</script>
-	<script src="scripts/sequence.jquery-min.js"></script>
-	<script src="scripts/sequencejs-options.sliding-horizontal-parallax.js"></script>
-
 </head>
 <body>
 	<header>
 		<div class="cover containers">
-			<h1 class="right logo">
-				<a href="index.html">llll</a>
+			<h1 class="right titr logo">
+				<a href="index.html">مشهد مقدس</a>
 			</h1>
 			<nav class="cover titr">
 				<menu class="cover">
-					<li class="selected"><a href="#">یلس</a></li>
-					<li><a href="#">لسیب</a></li>
-					<li><a href="#">لسیب</a></li>
-					<li><a href="#">لسیب</a></li>
-					<li><a href="#">لسیب</a></li>
-					<li><a href="#">لسیب</a></li>
-					<li><a href="#">لسیب</a></li>
-					<li><a href="#">لسیب</a></li>
+					<li class="selected"><a href="#">سرآغاز</a></li>
+					<li><a href="#">جاذبه گردشگری</a></li>
+					<li><a href="#">هتل</a></li>
+					<li><a href="#">رستوران</a></li>
+					<li><a href="#">گالری تصاویر</a></li>
+					<li><a href="#">درباره ما</a></li>
+					<li><a href="#">تماس با ما</a></li>
+					<li><a href="#">جستجو</a></li>
 				</menu>
 			</nav>
 		</div>
 	</header>
 	<div id="sequence-theme">
 		<div id="sequence">
-			<img class="prev" src="images/bt-prev.png" alt="Previous" />
-			<img class="next" src="images/bt-next.png" alt="Next" />
+			<div class="prev"></div>
+			<div class="next"></div>
 			<ul>
 				<li class="animate-in">
 					<div class="info">
-						<h2>Built using Sequence.js</h2>
-						<p>The Responsive Slider with Advanced CSS3 Transitions</p>
+						<h2 class="nazanin">سلام این یک عنوان می باشد</h2>
+						<h3 class="nazanin">این یک توضیح باری عنوان می باشد بله</h3>
+						<a href="#" class="nazanin learn-more">بیشتر بدون</a href="#">
 					</div>
-					<img class="sky" src="images/bg-clouds.png" alt="Blue Sky" />
-					<img class="balloon" src="images/balloon.png" alt="Balloon" />
+					<div class="sky one"></div>
+					<img src="images/balloon.png" alt="balloon" class="balloon" />
 				</li>
 				<li>
 					<div class="info">
-						<h2>Creative Control</h2>
-						<p>Create unique sliders using CSS3 transitions -- no jQuery knowledge required!</p>
+						<h2 class="nazanin">سلام این یک عنوان می باشد</h2>
+						<h3 class="nazanin">این یک توضیح باری عنوان می باشد بله</h3>
+						<a href="#" class="nazanin learn-more">بیشتر بدون</a href="#">
 					</div>
-					<img class="sky" src="images/bg-clouds.png" alt="Blue Sky" />
-					<img class="aeroplane" src="images/aeroplane.png" alt="Aeroplane" />
+					<div class="sky two"></div>
+					<img src="images/aeroplane.png" alt="aeroplane" class="aeroplane" />
 				</li>
 				<li>
 					<div class="info">
-						<h2>Cutting Edge</h2>
-						<p>Supports modern browsers, old browsers (IE7+), touch devices and responsive designs</p>
+						<h2 class="nazanin">سلام این یک عنوان می باشد</h2>
+						<h3 class="nazanin">این یک توضیح باری عنوان می باشد بله</h3>
+						<a href="#" class="nazanin learn-more">بیشتر بدون</a href="#">
 					</div>
-					<img class="sky" src="images/bg-clouds.png" alt="Blue Sky" />
-					<img class="kite" src="images/kite.png" alt="Kite" />
+					<div class="sky three"></div>
+					<img src="images/kite.png" alt="kite" class="kite" />					
 				</li>
 			</ul>
 		</div>
@@ -73,45 +67,41 @@
 	<section class="content">
 		<div class="content-featured">
 			<div class="containers">
-				<p class="nazanin">سلامنستشبم سکیبنم تک تشیسک نستکسنیبت کش نبتکس شنستبکتس سکیبمنس تیشبس یت بشم تبمس بم <a href="#" class="ghover">بیا بسب > </a></p>
+				<p class="nazanin">اینجا فعلا نمی دونم چی بنویسم ولی میدونم که باید باشه البته می تونه یک دعوت باشه <a href="#" class="ghover"> شروع کن</a></p>
 			</div>
 		</div>
 		<div class="containers">
 			<div class="cover topnews">
 				<article>
 					<a class="bg-article" href="#">
-						<figure></figure>
-						<h2>عنوان</h2>
-						<p>سششس بتی مسن شبک سی نمبتک ش شسیبس  سیبشس کشمنت سیک ب</p>
-						<p>شیسبشسیب بش ب</p>
-						<span>بیشتر</span>
+						<figure style="background-image:url(images/a1.png)"></figure>
+						<h2>جاذبه گردشگری</h2>
+						<p>اینجا هم هرچی به دهنمون رسید می نویسیم جون شما بیا با دیده ی خوش بینی به دنیا بنگریم غصه رو رها کنمی مژده شادی آوریم</p>
+						<span class="learn-more">بیشتر</span>
 					</a>
 				</article>
 				<article>
 					<a class="bg-article" href="#">
-						<figure></figure>
-						<h2>عنوان</h2>
-						<p>سششس بتی مسن شبک سی نمبتک ش شسیبس  سیبشس کشمنت سیک ب</p>
-						<p>شیسبشسیب بش ب</p>
-						<span>بیشتر</span>
+						<figure style="background-image:url(images/a2.png)"></figure>
+						<h2>هتل</h2>
+						<p>اینجا هم هرچی به دهنمون رسید می نویسیم جون شما بیا با دیده ی خوش بینی به دنیا بنگریم غصه رو رها کنمی مژده شادی آوریم</p>
+						<span class="learn-more">بیشتر</span>
 					</a>
 				</article>
 				<article>
 					<a class="bg-article" href="#">
-						<figure></figure>
-						<h2>عنوان</h2>
-						<p>سششس بتی مسن شبک سی نمبتک ش شسیبس  سیبشس کشمنت سیک ب</p>
-						<p>شیسبشسیب بش ب</p>
-						<span>بیشتر</span>
+						<figure style="background-image:url(images/a3.png)"></figure>
+						<h2>رستوران</h2>
+						<p>اینجا هم هرچی به دهنمون رسید می نویسیم جون شما بیا با دیده ی خوش بینی به دنیا بنگریم غصه رو رها کنمی مژده شادی آوریم</p>
+						<span class="learn-more">بیشتر</span>
 					</a>
 				</article>
 				<article class="last">
 					<a class="bg-article" href="#">
-						<figure></figure>
-						<h2>عنوان</h2>
-						<p>سششس بتی مسن شبک سی نمبتک ش شسیبس  سیبشس کشمنت سیک ب</p>
-						<p>شیسبشسیب بش ب</p>
-						<span>بیشتر</span>
+						<figure style="background-image:url(images/a4.png)"></figure>
+						<h2>آب و هوا</h2>
+						<p>اینجا هم هرچی به دهنمون رسید می نویسیم جون شما بیا با دیده ی خوش بینی به دنیا بنگریم غصه رو رها کنمی مژده شادی آوریم</p>
+						<span class="learn-more">بیشتر</span>
 					</a>
 				</article>
 			</div>
@@ -120,29 +110,59 @@
 
 	<footer>
 		<div class="footer-featured">
-			<div class="containers">
-				این قسمت باشه برای دانلود راهنمای سفر همون pdf
+			<div class="cover containers">
+				<a href="#" class="left download"></a>
+				<div class="desc">
+					<h2><a href="#">دفترچه مهتصر راهنمای گردشگری شهر مشهد</a></h2>
+					<p>شما می تونید بر روی تصویر یا عنران کلیک کرده و فایل را دانلود کرده سپس برید سر کوچه چاچش کنید شاید در طول سفر بدردتون بخوره شایدم نه !</p>
+				</div>
 			</div>
 		</div>
 		<div class="footer-top">
 			<div class="cover containers">
 				<div>
-					<h3 class="title">سبشیسب</h3>
+					<h4 class="title">یک چیز دیگه</h4>
+					<p>ممممممممممممممممممم ممممممممممممممم مممممممممممم مممممممممممممممممممممممم مممممممممممم ممممممممممممممممم ممممممممم مممممممممممممم  ممممممممممم ممممم مممممممممم ممممممممممممممممممممم</p>
 				</div>
 				<div>
-					<h3 class="title">شیسب</h3>
+					<h4 class="title">عضویت در خبرنامه</h4>
+					<p>اکه ایمیلتو بدی قول میدیم چیزای خوبی بهت بدیم :دی جون شما باور کن</p>
+					<input type="text" class="mail" placeholder="آردس ایمیل رو وارد کنید..."/>
+					<button class="learn-more subscribe">ثبت ایمیل</button>
 				</div>
 				<div>
-					<h3 class="title">سشیبسی</h3>
+					<h4 class="title">لینک های دیگر</h4>
 				</div>
 				<div class="last">
-					<h3 class="title">سشبی</h3>
+					<h4 class="title">مشخصات تماس</h4>
+					<ul>
+						<li class="home"  style="background-image:url('images/home.png');">آدرس: زمین آسیا ایران مشهد</li>
+						<li class="phone" style="background-image:url('images/phone.png');">تلفن: +9891512345</li>
+						<li class="fax"   style="background-image:url('images/fax.png');">فاکس: 1234560-8765</li>
+						<li class="email" style="background-image:url('images/mail.png');">ایمیل: email@gmail.com</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="footer-bottom">
-			<div class="containers"></div>
+			<div class="cover containers">
+				<p class=" left copyright">Copyright © 2013 TourOfPersia. Created by MA</p>
+				<ul class="right social">
+					<li><a style="background-image:url(images/footer-facebook.png);"href=""></a></li>
+					<li><a style="background-image:url(images/footer-google-plus.png);"href=""></a></li>
+					<li><a style="background-image:url(images/footer-twitter.png);"href=""></a></li>
+					<li><a style="background-image:url(images/footer-youtube.png);"href=""></a></li>
+				</ul>
+			</div>
 		</div>
 	</footer>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script>
+		 if (typeof jQuery == 'undefined'){
+		    document.write(unescape('%3Cscript src="scripts/jquery-min.js" %3E%3C/script%3E'));
+		 }
+		</script>
+	<script src="scripts/sequence.jquery-min.js"></script>
+	<script src="scripts/sequencejs-options.sliding-horizontal-parallax.js"></script>
 </body>
 </html>
